Bug 263319 - First letter of category gets selected when editing splits causing it to be overwritten as typing continues
Summary: First letter of category gets selected when editing splits causing it to be o...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.2
Platform: FreeBSD Ports FreeBSD
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-16 14:24 UTC by Jason E. Hale
Modified: 2011-01-17 19:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jason E. Hale 2011-01-16 14:24:00 UTC
Version:           4.5.2 (using KDE 4.5.5) 
OS:                FreeBSD

In the "Split transaction" window if you start typing the letters of the category you want, the first letter becomes selected (or highlighted) and as you continue to type, the first letter gets overwritten.  This does not happen if you double click the line first and then type in the category you want.

Reproducible: Always

Steps to Reproduce:
Open a "Split transaction" window from a ledger.
Start typing in a category name. (Do not click on the line first)

Actual Results:  
First letter typed gets selected (or highlighted).  As one continues typing, the first letter gets overwritten because it is selected.

Expected Results:  
First letter typed should not become automatically selected.

Using QT 4.7.1 / KDE 4.5.5
Compiled with GCC 4.2.1 on FreeBSD 8.1 i386
Comment 1 Thomas Baumgart 2011-01-17 19:31:48 UTC
SVN commit 1215126 by tbaumgart:

Don't select the character that starts the split editor

BUG: 263319

 M  +20 -9     dialogs/kmymoneysplittable.cpp  
 M  +2 -2      dialogs/kmymoneysplittable.h  
 M  +36 -7     widgets/kmymoneylineedit.cpp  
 M  +10 -13    widgets/kmymoneylineedit.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1215126
Comment 2 Thomas Baumgart 2011-01-17 19:43:30 UTC
SVN commit 1215129 by tbaumgart:

Don't select the character that starts the split editor

Backported to stable branch.

BUG: 263319

 M  +20 -9     dialogs/kmymoneysplittable.cpp  
 M  +2 -2      dialogs/kmymoneysplittable.h  
 M  +36 -7     widgets/kmymoneylineedit.cpp  
 M  +10 -13    widgets/kmymoneylineedit.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1215129