Don't select the character that starts the split editor

Backported to stable branch.

BUG: 263319

svn path=/branches/kmymoney/4.5/; revision=1215129